Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23099

QJSEngine cannot be used from threads other than the gui thread

    XMLWordPrintable

Details

    • a401d0756f6ac3cee5597d5528515061326c3bfa

    Description

      If QJSEngine is used in a thread other than the GUI thread, the use of private V8 API is required to initialize and enter a per-thread isolate.

      We should remove this limitation by automatically allocating and entering an isolate in TLS.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            shausman Simon Hausmann
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes